<resources>
    <string name="error_message">Could not fetch the data. Please check your internet connectivity and try again !!</string>
    <string name="colleges">Colleges</string>
    <string name="events">Events</string>
    <string name="app_name">UniConn</string>
    <string name="grid_event_text">Events</string>
    <string name="grid_univ_text">Universities</string>
    <string name="grid_inst_text">Standalone Institutes</string>
    <string name="grid_explore_projects_text">Explore Projects</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">College Information</string>
    <string name="article_detail_dept">Departments</string>
    <string name="article_detail_level">Course Levels</string>
    <string name="article_detail_infra">Infrastructure</string>
    <string name="article_detail_fellow">Fellowships and Scholarship Opportunities</string>
    <string name="article_detail_hostel">Hostel Information</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_uname">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_uname">This Username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="passwordlabel">Enter Password</string>
    <string name="usernamelabel">Enter UserName</string>
    <string name="logintext">Sign In</string>
    <string name="gis_button_text">Get to know Institutes around your location.Use out GIS based Searching option.</string>
</resources>
